# Win95-KeyTool

./: Cargo.toml  README.md
.github/workflows/: build.yml  release  release.yml
src/: lib.rs  main.rs
