[package]
name = "win95-keytool"
description = "Product key generator / validator for Windows 95"
authors = ["Nando Lawson"]
version = "0.3.0"
readme = "README.md"
license = "GPL-3.0"
exclude = ["target/", ".github/", ".gitignore"]
repository = "https://github.com/nandolawson/Win95-KeyTool"
edition = "2021"

[dependencies]
rand = "0.8.5"

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
